add time report

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 					<td>Pixels
 					<td id=pixel-count>
 				<tr>
+					<td>Time
+					<td id=time>
+				<tr>
 					<td>Pixels/sec
 					<td id=pps>
 				<tr>
