--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
 						<label for=threads>Threads</label>
 					<td>
 						<input id=threads value=4 type=range min=1 max=32>
+				<tr>
+					<td>
+						<label for=maxiter>Max iters</label>
+					<td>
+						<input id=maxiter value=255 type=range min=1 max=2048>
 		</table>
 	</div>
